src/test/resources/testcases/valid/operators/precedence.tc

int main() {
    int a = 2 + 3 * 4;
    int b = (2 + 3) * 4;
    int c = 10 - 4 - 2;
    int d = 10 / 2 * 5;
    if (a == 14 && b == 20 && c == 4 && d == 25) {
        return 1;
    }
    return 0;
}

