src/test/resources/testcases/invalid/syntax/if_missing_paren.tc
int main() {
    int x = 5;

    if x > 0 { // 错误：if 后面缺少 '(' 和 ')'
        return 1;
    }

    return 0;
}